# boilerplate-dev

./: .env  .env.example  .gitignore  AUDITORIA_MASTER.md  Cargo.toml  README.md  check_output.txt  deny.toml  generate_admin_hash.rs  generate_hash.rs  justfile  lefthook.yml  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: ci.yml  desktop.yml  mobile.yml
apps/api/: Cargo.toml
apps/api/src/: docs.rs  error.rs  lib.rs  main.rs  router.rs  setup.rs  state.rs
apps/api/src/handlers/: admin.rs  audit.rs  auth.rs  content.rs  health.rs  leads.rs  mod.rs  settings.rs  users.rs
apps/api/src/jobs/: cleanup_job.rs  email_job.rs  mod.rs  worker.rs
apps/api/src/middleware/: audit.rs  auth.rs  mod.rs  rbac.rs  request_id.rs  trace.rs
apps/api/tests/: auth_e2e.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/icons/: icon.icns
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: auth.rs  users.rs
apps/mobile/: package.json
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: mobile.json
apps/mobile/src-tauri/src/: lib.rs  main.rs  state.rs
apps/mobile/src-tauri/src/commands/: auth.rs  users.rs
apps/web/: Dockerfile  astro.config.mjs  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json
config/: production.example.toml
crates/application/: Cargo.toml
crates/application/src/: lib.rs  use_cases.rs
crates/application/src/admin/: get_analytics.rs  get_stats.rs  mod.rs
crates/application/src/audit/: list_audit.rs  mod.rs
crates/application/src/auth/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs
crates/application/src/content/: list_content.rs  mod.rs  update_content.rs
crates/application/src/leads/: capture_lead.rs  list_leads.rs  mod.rs  update_lead_status.rs
crates/application/src/settings/: get_settings.rs  mod.rs  update_setting.rs
crates/application/src/users/: create_user.rs  get_user.rs  impersonate_user.rs  list_users.rs  mod.rs  soft_delete_user.rs  update_user.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  paseto.rs  password.rs  token.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  pool.rs  repositories.rs
crates/database/src/models/: audit_row.rs  mod.rs  user_row.rs
crates/database/src/repositories/: cached_user_repository.rs  mod.rs  sqlite_audit_repository.rs  sqlite_content_repository.rs  sqlite_lead_repository.rs  sqlite_session_repository.rs  sqlite_settings_repository.rs  sqlite_user_repository.rs
crates/domain/: Cargo.toml
crates/domain/src/: entities.rs  errors.rs  lib.rs  value_objects.rs
crates/domain/src/entities/: audit_log.rs  content_block.rs  lead.rs  mod.rs  role.rs  session.rs  system_setting.rs  user.rs
crates/domain/src/ports/: audit_repository.rs  auth_provider.rs  content_repository.rs  lead_repository.rs  mailer.rs  mod.rs  session_repository.rs  settings_repository.rs  storage_repository.rs  token_repository.rs  user_repository.rs
crates/domain/src/value_objects/: email.rs  mod.rs  password_hash.rs  permission.rs  user_id.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs  publisher.rs  subscriber.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  http.rs  lib.rs  router.rs
crates/mailer/: Cargo.toml
crates/mailer/src/: lib.rs  ports.rs  resend_adapter.rs
crates/mobile-bridge/: Cargo.toml  build.rs
crates/mobile-bridge/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  ports.rs  s3_adapter.rs
data/migrations/: 20260305135148_create_users_table.sql  20260305135149_create_rbac.sql  20260305135150_create_tokens.sql  20260305135151_create_audit_logs.sql  20260305135152_seed_system_data.sql  20260305135153_create_sessions.sql  20260422085600_create_leads_table.sql  20260423080000_add_revoked_at_to_sessions.sql  20260424182000_add_admin_fields_to_users.sql  20260424182800_add_status_to_leads.sql  20260424183100_create_content_blocks.sql  20260424183500_create_system_settings.sql
guia/: PROMPT_MAESTRO.md
guia/adr/: ADR-0001-arquitectura-hexagonal.md  ADR-0002-configuracion-tipeada-secretos.md  ADR-0003-stack-backend-rust-axum.md  ADR-0004-persistencia-sqlite-litestream.md  ADR-0005-migraciones-seeding.md  ADR-0006-rbac-sessions-audit.md  ADR-0007-manejo-errores.md  ADR-0008-seguridad-auth-paseto.md  ADR-0009-rate-limiting.md  ADR-0010-testing-calidad.md  ADR-0011-estandares-desarrollo.md  ADR-0012-herramientas-desarrollo.md  ADR-0013-build-externo-binarios.md  ADR-0014-infraestructura-deploy.md  ADR-0015-monitoreo-tareas-criticas.md  ADR-0016-observabilidad-telemetria.md  ADR-0017-cache-moka-decorator.md  ADR-0018-procesamiento-asincrono-apalis.md  ADR-0019-mailer-resend.md  ADR-0020-almacenamiento-tigris.md  ADR-0021-documentacion-openapi-utoipa.md  ADR-0022-frontend-astro-svelte.md  ADR-0023-i18n-adaptacion-regional.md  ADR-0024-filosofia-local-first.md  ADR-0025-eventos-nats-jetstream.md  ADR-0026-mensajeria-nats-publisher.md  ADR-0027-connectrpc-protobuf.md  ADR-0028-sintonia-cli.md  ADR-0029-landing-page-leads.md  ADR-0030-multiplataforma-tridente.md  ADR-0031-estrategia-escalamiento.md
guia/docs/: 00-GUIA-USO.md  01-ARCHITECTURE.md  02-STACK.md  03-STRUCTURE.md  04-VERIFICATION.md  05-MODULES.md  ADR-VPS-5-PILARES.md  BRUJULA-COMPLETA.md  DASHBOARD-DISENO.md  INICIO.md  SINTONIA-CLI.md
guia/roadmap/: 00-ROADMAP-TEMPLATE.md  01-ROADMAP-MASTER.md  02-ROADMAP-GENESIS.md  03-ROADMAP-BACKEND.md  04-ROADMAP-FRONTEND.md  05-ROADMAP-AUTH-FULLSTACK.md  06-ROADMAP-LANDING.md  07-ROADMAP-INFRA.md  08-ROADMAP-TAURI-DESKTOP.md  09-ROADMAP-MOBILE.md  50-ROADMAP-FASE2.md  60-ROADMAP-FASE3.md  70-ROADMAP-FUTURA.md  80-ROADMAP-ADMIN.md
infra/caddy/: Caddyfile
infra/docker/: Containerfile  docker-compose.prod.yml  docker-compose.yml
infra/kamal/: .kamal
infra/litestream/: litestream.yml
(+104 files in other folders)
