# Ubicación: `apps/api/Cargo.toml`
#
# Descripción: Aplicación API REST con Axum. Ensambla todos los crates.
#              Punto de entrada HTTP del sistema.
#
# ADRs relacionados: ADR 0001, ADR 0003 (Axum), ADR 0008 (PASETO)

[package]
name    = "api"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# ── Capas del monorepo ──────────────────────────────────────────────────────
infrastructure = { path = "../../crates/infrastructure" }
domain         = { path = "../../crates/domain" }
application    = { path = "../../crates/application" }
database       = { path = "../../crates/database" }
auth           = { path = "../../crates/auth" }
mailer         = { path = "../../crates/mailer" }
storage        = { path = "../../crates/storage" }

# ── Web ───────────────────────────────────────────────────────────────────────
axum       = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }

# ── Runtime ──────────────────────────────────────────────────────────────────
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
time       = { workspace = true }

# ── Config ─────────────────────────────────────────────────────────────────────
config  = { workspace = true }
dotenvy = { workspace = true }

# ── Errores ───────────────────────────────────────────────────────────────────
anyhow = { workspace = true }
thiserror = { workspace = true }

# ── DB ────────────────────────────────────────────────────────────────────────
sqlx = { workspace = true }

# ── Docs API ──────────────────────────────────────────────────────────────────
utoipa        = { workspace = true }
utoipa-scalar = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.13", features = ["json"] }
