[package]
name = "boilerplate-desktop"
version = "0.1.0"
edition = "2024"

[lib]
name = "boilerplate_desktop_lib"
path = "src-tauri/src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

application = { path = "../../crates/application" }
database = { path = "../../crates/database" }
auth = { path = "../../crates/auth" }
domain = { path = "../../crates/domain" }

sqlx = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "boilerplate-desktop"
path = "src-tauri/src/main.rs"
